openapi controller: private api security
